#821 Retrofit updatable emulated scrollable cursors to have same behaviour as updatable server-side scrollable cursors
publishes jdp-2024-05